Polish
This commit uses more modern API for the following use cases:

- Collections.unmodifiableList to List.copyOf()
- Collections.unmodifiableMap to Map.copyOf.
- SimpleEntry to Map.entry

See gh-1458